@@ -27,6 +27,7 @@
  */
 
 #define COMMAND_SEQUENCE        "SEQUENCE"
+#define COMMAND_IMAGE           "I"
 #define COMMAND_EXPOSURE        "E"
 #define COMMAND_DARK            "D"
 #define COMMAND_CHANGE          "C"
