@@ -1,3 +1,6 @@
+2014-06-06
+ * I command (take image, leave shutter as it is)
+
 2014-04-27
  * -s option for rts2-json, rts2-bb-json script
 
